group  notebooks by volcano names

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,13 @@ cesm1_2_1
 volcano
 wy.ipynb
 control_1860_volc6.ipynb
+OLD/volcano_impact_on_climate_precip.ipynb
+OLD/volcano_impact_on_climate_swdn_sfc.ipynb
+OLD/volcano_impact_on_climate_temp.ipynb
+OLD/volcano_impact_on_climate_ts.ipynb
+OLD/volcano_impact_on_climate_ucomp.ipynb
+open_jupyter
+open_jupyter
+open_jupyterlab
+open_jupyter
+open_jupyter
